Changed JsonDeserializer to JsonAlbumOrganizer
ALL TESTS PASS. Renamed unit test folder, changed JsonDeserializer class to JsonAlbumOrganizer class (may need to change this again if too many responsibilities). Rewrote deserializeJson method to deserialize collection rather than single Json object.

--- a/PhotoAlbum/PhotoAlbum/PhotoAlbum.csproj
+++ b/PhotoAlbum/PhotoAlbum/PhotoAlbum.csproj
@@ -48,7 +48,7 @@
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
     <Compile Include="Photo.cs" />
-    <Compile Include="JsonDeserializer.cs" />
+    <Compile Include="JsonAlbumOrganizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
