--- a/PhotoAlbum/PhotoAlbum/PhotoAlbum.csproj
+++ b/PhotoAlbum/PhotoAlbum/PhotoAlbum.csproj
@@ -48,7 +48,8 @@
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
     <Compile Include="Photo.cs" />
-    <Compile Include="JsonAlbumOrganizer.cs" />
+    <Compile Include="JsonPhotoDeserializer.cs" />
+    <Compile Include="PhotoOrganizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
