--- a/PhotoAlbum/PhotoAlbum.UnitTests/PhotoAlbumUnitTests.csproj
+++ b/PhotoAlbum/PhotoAlbum.UnitTests/PhotoAlbumUnitTests.csproj
@@ -51,7 +51,8 @@
   <ItemGroup>
     <Compile Include="EntryPointUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="JsonAlbumOrganizerUnitTests.cs" />
+    <Compile Include="JsonPhotoDeserializerUnitTests.cs" />
+    <Compile Include="PhotoOrganizerUnitTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
