--- a/PhotoAlbum/PhotoAlbum.UnitTests/PhotoAlbumUnitTests.csproj
+++ b/PhotoAlbum/PhotoAlbum.UnitTests/PhotoAlbumUnitTests.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="JsonPhotoDeserializerUnitTests.cs" />
     <Compile Include="PhotoOrganizerUnitTests.cs" />
+    <Compile Include="TestUserInput.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
