--- a/PhotoAlbum/PhotoAlbum/PhotoAlbum.csproj
+++ b/PhotoAlbum/PhotoAlbum/PhotoAlbum.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EntryPoint.cs" />
+    <Compile Include="IUserInput.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Photo.cs" />
     <Compile Include="JsonPhotoDeserializer.cs" />
     <Compile Include="PhotoOrganizer.cs" />
